# banco_aurora

./: .gitignore  Dockerfile  README.md  api.py  cli.py  docker-compose.yml  insomnia_collection.json  main.py  menu.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  python-ci.yml
bank/: __init__.py  accounts.py  bank.py  customer.py  exceptions.py
tests/: test_core.py
