
[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "banco-aurora"
version = "0.1.0"
description = "Sistema didático de contas bancárias com herança/polimorfismo."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Matheus Siqueira", email = "example@example.com"}]
license = {text = "MIT"}
dependencies = [
    "flask>=3.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0"
]

[project.urls]
Homepage = "https://github.com/siqueirahub/banco_aurora"
Repository = "https://github.com/siqueirahub/banco_aurora"

[tool.setuptools.packages.find]
where = ["."]
include = ["bank"]
